fixed wordwrap on main button
had some overflow at certain screen widths text now fits into button on all screen widths

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,7 +30,8 @@ body, html {
 }
 
 .gh-browse-jobs {
-  font-size: 40px;
+  font-size: 2em;
+  white-space: pre-wrap;
 }
 
 .gh-browse-jobs:hover {
